# voxora

./: .gitignore  check_db.py  check_headers.py  debug_log.txt  migrate_tasks.py  package-lock.json  package.json  pyproject.toml  voice_assistant.db  walkthrough.md.resolved
app/: config.py  main.py  schemas.py
app/core/: events.py  exceptions.py
app/database/: models.py
app/models/: __init__.py  call.py  candidate.py  enums.py  meeting.py  notification.py  resume.py  task.py
app/utils/: audio_processing.py  datetime_utils.py  matching.py  parser.py  validation.py
app/worker/: celery_app.py  tasks.py
backend/: app.py
config/: development.yaml
docker/: Dockerfile
docs/api/: api_docs.md
frontend/: calls.html  dashboard-hr.html  dashboard.html  login.html  market.html
frontend/css/: styles.css
frontend/js/: active_call.js  app.js  auth.js  calls.js  dashboard-personal.js  market.js  reports.js
requirements/: base.txt  dev.txt  prod.txt
temp_hr_dashboard/app/: globals.css  page.tsx
temp_hr_dashboard/lib/: animations.tsx  hr-data.ts  hr-store.tsx
tests/test_auth/: test_login.py
tmp/: test_booking_api.py
voxora/: .env.example  README.md  check_db.py  migrate_db.py  test_api.py  test_complete.py  test_put.py
voxora/alembic/: env.py
voxora/app/: config.py  main.py  schemas.py
voxora/config/: production.yaml
voxora/docker/: docker-compose.yml
voxora/docs/: setup.md
voxora/frontend/: ai-itinerary.html  booking.html  dashboard-hr.html  dashboard-personal.html  dashboard.html  data-intelligence.html  diagnostic.html  index.html  (+2 more)
(+144 files in other folders)
