[project]
name = "voxora"
version = "0.1.0"
description = "Enterprise-grade backend for voice-controlled intelligent digital assistant"
authors = [
    { name = "AI Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.12.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
